<resources>
    <string name="app_name">Imij Demo</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>

    <string-array name="imij_array">
        <item>Original</item>
        <item>Grayscale</item>
        <item>Gaussian Blur</item>
        <item>Mean Blur</item>
        <item>Constant Threshold</item>
        <item>Adaptive Threshold</item>
        <item>Resize</item>
        <item>Sobel</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>
    <string name="about_title">About</string>
    <string name="about_summary">v. 0.0</string>

    <string name="about_key">about_settings_key</string>
    <string name="pref_gaussianBlurRadius">gaussian_blur_radius_key</string>
    <string name="pref_meanBlurRadius">mean_blur_radius_key</string>
    <string name="pref_thresholdValue">threshold_value_key</string>
    <string name="pref_adaptiveThresholdRadius">adaptive_threshold_radius_key</string>
    <string name="pref_resizeDimensions">resize_dimensions_key</string>
</resources>
